--- a/usr.bin/id/id.1
+++ b/usr.bin/id/id.1
@@ -32,8 +32,7 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"	from: @(#)id.1	8.1 (Berkeley) 6/6/93
-.\"	$Id: id.1,v 1.1.1.2 1994/05/05 22:50:15 cgd Exp $
+.\"	@(#)id.1	8.1 (Berkeley) 6/6/93
 .\"
 .Dd "June 6, 1993"
 .Dt ID 1
