--- a/lib/libcompat/regexp/regexp.3
+++ b/lib/libcompat/regexp/regexp.3
@@ -1,5 +1,5 @@
-.\" Copyright 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -29,9 +29,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)regexp.3	5.2 (Berkeley) 4/20/91
+.\"     @(#)regexp.3	8.1 (Berkeley) 6/4/93
 .\"
-.Dd April 20, 1991
+.Dd June 4, 1993
 .Dt REGEXP 3
 .Os
 .Sh NAME
@@ -49,6 +49,9 @@
 .Ft void
 .Fn regsub "const regexp *prog" "const char *source" "char *dest"
 .Sh DESCRIPTION
+This interface is made obsolete by
+.Xr regex 3 .
+.Pp
 The
 .Fn regcomp ,
 .Fn regexec ,
