--- a/lib/libc/stdlib/getopt.3
+++ b/lib/libc/stdlib/getopt.3
@@ -1,5 +1,5 @@
-.\" Copyright (c) 1988, 1991 Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1988, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -29,29 +29,31 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)getopt.3	6.16 (Berkeley) 4/19/91
+.\"     @(#)getopt.3	8.4 (Berkeley) 4/19/94
 .\"
-.Dd April 19, 1991
+.Dd April 19, 1994
 .Dt GETOPT 3
 .Os BSD 4.3
 .Sh NAME
 .Nm getopt
-.Nd get option letter from argv
+.Nd get option character from command line argument list
 .Sh SYNOPSIS
 .Fd #include <stdlib.h>
-.Vt extern char *optarg
-.Vt extern int   optind
-.Vt extern int   opterr
+.Vt extern char *optarg;
+.Vt extern int   optind;
+.Vt extern int   optopt;
+.Vt extern int   opterr;
+.Vt extern int   optreset;
 .Ft int
 .Fn getopt "int argc" "char * const *argv" "const char *optstring"
 .Sh DESCRIPTION
 The
 .Fn getopt
-function gets 
-the next
+function incrementally parses a command line argument list
+.Fa argv
+and returns the next
 .Em known
-option character from
-.Fa argv .
+option character.
 An option character is
 .Em known
 if it has been specified in the string of accepted option characters,
@@ -59,9 +61,18 @@ if it has been specified in the string of accepted option characters,
 .Pp
 The option string
 .Fa optstring
-may contain the following characters; letters and
-letters followed by a colon to indicate an option argument
-is to follow. It does not matter to
+may contain the following elements: individual characters, and
+characters followed by a colon to indicate an option argument
+is to follow.
+For example, an option string
+.Li "\&""x""
+recognizes an option
+.Dq Fl x ,
+and an option string
+.Li "\&""x:""
+recognizes an option and argument
+.Dq Fl x Ar argument .
+It does not matter to
 .Fn getopt
 if a following argument has leading white space.
 .Pp
@@ -76,19 +87,35 @@ contains the index to the next
 argument for a subsequent call
 to
 .Fn getopt .
+The variable
+.Va optopt
+saves the last
+.Em known
+option character returned by
+.Fn getopt .
 .Pp
 The variable
 .Va opterr
 and
 .Va optind
 are both initialized to 1.
+The
+.Va optind
+variable may be set to another value before a set of calls to
+.Fn getopt
+in order to skip over more or less argv entries.
+.Pp
 In order to use
 .Fn getopt
 to evaluate multiple sets of arguments, or to evaluate a single set of
 arguments multiple times,
+the variable
+.Va optreset
+must be set to 1 before the second and each additional set of calls to
+.Fn getopt ,
+and the variable
 .Va optind
-must be initialized to the number of argv entries to be skipped in each
-evaluation.
+must be reinitialized.
 .Pp
 The
 .Fn getopt
@@ -115,14 +142,34 @@ If the
 function encounters a character not found in the string
 .Va optarg
 or detects
-a missing option argument
-it writes error message
+a missing option argument it writes an error message and returns
 .Ql ?
 to the
 .Em stderr .
 Setting
 .Va opterr
 to a zero will disable these error messages.
+If
+.Va optstring 
+has a leading 
+.Ql \&:
+then a missing option argument causes a
+.Ql \&:
+to be returned in addition to suppressing any error messages.
+.Pp
+Option arguments are allowed to begin with
+.Dq Li \- ;
+this is reasonable but
+reduces the amount of error checking possible.
+.Sh EXTENSIONS
+The
+.Va optreset
+variable was added to make it possible to call the
+.Fn getopt
+function multiple times.
+This is an extension to the
+.St -p1003.2
+specification.
 .Sh EXAMPLE
 .Bd -literal -compact
 extern char *optarg;
@@ -138,8 +185,8 @@ while ((ch = getopt(argc, argv, "bf:")) != EOF)
 	case 'f':
 		if ((fd = open(optarg, O_RDONLY, 0)) < 0) {
 			(void)fprintf(stderr,
-				"myname: unable to read file %s.\en", optarg);
-			exit(1) ;
+			    "myname: %s: %s\en", optarg, strerror(errno));
+			exit(1);
 		}
 		break;
 	case '?':
@@ -155,11 +202,6 @@ The
 function appeared
 .Bx 4.3 .
 .Sh BUGS
-Option arguments are allowed to begin with
-.Dq Li \- ;
-this is reasonable but
-reduces the amount of error checking possible.
-.Pp
 A single dash
 .Dq Li -
 may be specified as an character in
@@ -190,7 +232,7 @@ as an option.
 This practice is wrong, and should not be used in any current development.
 It is provided for backward compatibility
 .Em only .
-The following code fragment works fairly well.
+The following code fragment works in most cases.
 .Bd -literal -offset indent
 int length;
 char *p;
