--- a/lib/libc/gen/uname.3
+++ b/lib/libc/gen/uname.3
@@ -1,4 +1,4 @@
-.\" Copyright (c) 1989, 1991, 1993
+.\" Copyright (c) 1994
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
@@ -29,36 +29,64 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)getloadavg.3	8.1 (Berkeley) 6/4/93
+.\"	@(#)uname.3	8.1 (Berkeley) 1/4/94
 .\"
-.Dd June 4, 1993
-.Dt GETLOADAVG 3
+.Dd "January 4, 1994"
+.Dt UNAME 3
 .Os
 .Sh NAME
-.Nm getloadavg
-.Nd get system load averages
+.Nm uname
+.Nd get system identification
 .Sh SYNOPSIS
-.Fn getloadavg "double loadavg[]" "int nelem"
+.Fd #include <sys/utsname.h>
+.Ft int
+.Fn uname "struct utsname *name"
 .Sh DESCRIPTION
 The
-.Fn getloadavg
-function returns the number of processes in the system run queue
-averaged over various periods of time.
-Up to
-.Fa nelem
-samples are retrieved and assigned to successive elements of
-.Fa loadavg Ns Bq .
-The system imposes a maximum of 3 samples, representing averages
-over the last 1, 5, and 15 minutes, respectively.
-.Sh DIAGNOSTICS
-If the load average was unobtainable, \-1 is returned; otherwise,
-the number of samples actually retrieved is returned.
+.Fn uname
+function stores nul-terminated strings of information identifying
+the current system into the structure referenced by
+.Fa name .
+.Pp
+The
+.Li utsname
+structure is defined in the
+.Li <sys/utsname.h>
+header file, and contains the following members:
+.Bl -tag -width nodenameXXXX -offset indent
+.It sysname
+Name of the operating system implementation.
+.It nodename
+Network name of this machine.
+.It release
+Release level of the operating system.
+.It version
+Version level of the operating system.
+.It machine
+Machine hardware platform.
+.El
+.Sh RETURN VALUES
+If
+.Nm uname
+is successful, 0 is returned, otherwise, -1 is returned and
+.Va errno
+is set appropriately.
+.Sh ERRORS
+The
+.Fn uname
+function may fail and set
+.Va errno
+for any of the errors specified for the library functions
+.Xr sysctl 3 .
 .Sh SEE ALSO
-.Xr uptime 1 ,
-.Xr sysctl 2 ,
-.Xr kvm_getloadavg 3
+.Xr uname 1 ,
+.Xr sysctl 3
+.Sh STANDARDS
+The
+.Fn uname
+function conforms to
+.St -p1003.1-88 .
 .Sh HISTORY
 The
-.Fn getloadavg
-function appeared in
-.Bx 4.3 Reno .
+.Nm uname
+function first appeared in 4.4BSD.
