--- a/lib/libc/gen/getloadavg.3
+++ b/lib/libc/gen/getloadavg.3
@@ -1,5 +1,5 @@
-.\" Copyright (c) 1989, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1989, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -29,9 +29,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)getloadavg.3	6.3 (Berkeley) 4/19/91
+.\"     @(#)getloadavg.3	8.1 (Berkeley) 6/4/93
 .\"
-.Dd April 19, 1991
+.Dd June 4, 1993
 .Dt GETLOADAVG 3
 .Os
 .Sh NAME
@@ -42,9 +42,9 @@
 .Sh DESCRIPTION
 The
 .Fn getloadavg
-function
-returns the number of processes in the system run queue
-averaged over various periods of time.  Up to
+function returns the number of processes in the system run queue
+averaged over various periods of time.
+Up to
 .Fa nelem
 samples are retrieved and assigned to successive elements of
 .Fa loadavg Ns Bq .
@@ -55,14 +55,10 @@ If the load average was unobtainable, \-1 is returned; otherwise,
 the number of samples actually retrieved is returned.
 .Sh SEE ALSO
 .Xr uptime 1 ,
-.Xr nlist 3 ,
-.Xr kmem 4
+.Xr sysctl 2 ,
+.Xr kvm_getloadavg 3
 .Sh HISTORY
 The
 .Fn getloadavg
-function is
-.Ud .
-.Sh BUGS
-Programs using this utility must have read permission on
-.Pa /dev/kmem .
-This restriction will eventually be lifted.
+function appeared in
+.Bx 4.3 Reno .
