--- a/bin/ps/ps.1
+++ b/bin/ps/ps.1
@@ -1,5 +1,5 @@
-.\" Copyright (c) 1980, 1990, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1980, 1990, 1991, 1993, 1994
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -29,9 +29,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)ps.1	6.17 (Berkeley) 6/20/91
+.\"     @(#)ps.1	8.3 (Berkeley) 4/18/94
 .\"
-.Dd June 20, 1991
+.Dd April 18, 1994
 .Dt PS 1
 .Os BSD 4
 .Sh NAME
@@ -39,7 +39,7 @@
 .Nd process status
 .Sh SYNOPSIS
 .Nm \&ps
-.Op Fl aChjlmrSTuvwx
+.Op Fl aCehjlmrSTuvwx
 .Op Fl M Ar core
 .Op Fl N Ar system
 .Op Fl O Ar fmt
@@ -75,6 +75,8 @@ Display information about other users' processes as well as your own.
 Change the way the cpu percentage is calculated by using a ``raw''
 cpu calculation that ignores ``resident'' time (this normally has
 no effect).
+.It Fl e
+Display the environment as well.
 .It Fl h
 Repeat the information header as often as necessary to guarantee one
 header per page of information.
@@ -99,7 +101,7 @@ Extract the name list from the specified system instead of the default
 .Dq Pa /vmunix .
 .It Fl O
 Add the information associated with the space or comma separated list
-of keywords specifed, after the process
+of keywords specified, after the process
 .Tn ID ,
 in the default information
 display.
@@ -108,7 +110,7 @@ This causes the printed header to use the specified string instead of
 the standard header.
 .It Fl o
 Display information associated with the space or comma separated list
-of keywords specifed.
+of keywords specified.
 Keywords may be appended with an equals (``='') sign and a string.
 This causes the printed header to use the specified string instead of
 the standard header.
@@ -137,7 +139,7 @@ option implies the
 option.
 .It Fl v
 Display information associated with the following keywords:
-pid, state, time, sl, re, pagein, vsz, rss, lim, tsiz, trss,
+pid, state, time, sl, re, pagein, vsz, rss, lim, tsiz,
 %cpu, %mem and command.
 The
 .Fl v
@@ -161,7 +163,7 @@ Display information about processes without controlling terminals.
 .El
 .Pp
 A complete list of the available keywords are listed below.
-Some of these keywords are further specifed as follows:
+Some of these keywords are further specified as follows:
 .Bl -tag -width indent
 .It %cpu
 The cpu utilization of the process; this is a decaying average over up to
@@ -184,7 +186,6 @@ the include file
 .It Dv "STRC" Ta No "0x0000010	process is being traced"
 .It Dv "SWTED" Ta No "0x0000020	another tracing flag"
 .It Dv "SSINTR" Ta No "0x0000040	sleep is interruptible"
-.It Dv "SPAGE" Ta No "0x0000080	process in page wait state"
 .It Dv "SKEEP" Ta No "0x0000100	another flag to prevent swap out"
 .It Dv "SOMASK" Ta No "0x0000200	restore old mask after taking signal"
 .It Dv "SWEXIT" Ta No "0x0000400	working on exiting"
@@ -241,11 +242,9 @@ The first letter indicates the run state of the process:
 .Pp
 .Bl -tag -width indent -compact
 .It D
-Marks a process in disk (or other short term, uninterruptable) wait.
+Marks a process in disk (or other short term, uninterruptible) wait.
 .It I
 Marks a process that is idle (sleeping for longer than about 20 seconds).
-.It P
-Marks a process in page wait.
 .It R
 Marks a runnable process.
 .It S
@@ -447,8 +446,8 @@ accumulated cpu time, user + system (alias cputime)
 .It tpgid
 control terminal process group
 .Tn ID
-.It trss
-text resident set size (in Kbytes)
+.\".It trss
+.\"text resident set size (in Kbytes)
 .It tsess
 control terminal session pointer
 .It tsiz
