--- a/usr.bin/w/uptime.1
+++ b/usr.bin/w/uptime.1
@@ -1,5 +1,5 @@
-.\" Copyright (c) 1980, 1990 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1980, 1990, 1993, 1994
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -29,23 +29,23 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)uptime.1	6.2 (Berkeley) 4/23/91
+.\"     @(#)uptime.1	8.2 (Berkeley) 4/18/94
 .\"
-.Dd April 23, 1991
+.Dd April 18, 1994
 .Dt UPTIME 1
 .Os BSD 3
 .Sh NAME
 .Nm uptime
-.Nd show how long system has been up
+.Nd show how long system has been running
 .Sh SYNOPSIS
 .Nm uptime
 .Sh DESCRIPTION
-Uptime prints the current time, the length of time the system has been up,
-and the average number of jobs in the run queue over the last 1, 5 and
-15 minutes.
-It is, essentially, the first line of a
-.Xr w 1
-command.
+The 
+.Nm uptime
+utility displays the current time,
+the length of time the system has been up,
+the number of users, and the load average of the system over the last
+1, 5, and 15 minutes.
 .Sh FILES
 .Bl -tag -width /vmunix
 .It Pa /vmunix
