--- a/usr.bin/fstat/fstat.1
+++ b/usr.bin/fstat/fstat.1
@@ -1,5 +1,5 @@
-.\" Copyright (c) 1987, 1991 Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1987, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -29,9 +29,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)fstat.1	5.12 (Berkeley) 7/22/91
+.\"     @(#)fstat.1	8.3 (Berkeley) 2/25/94
 .\"
-.Dd July 22, 1991
+.Dd February 25, 1994
 .Dt FSTAT 1
 .Os BSD 4
 .Sh NAME
@@ -42,6 +42,7 @@
 .Op Fl fnv
 .Op Fl M Ar core
 .Op Fl N Ar system
+.Op Fl p Ar pid
 .Op Fl u Ar user
 .Op Ar filename...
 .Sh DESCRIPTION
@@ -57,8 +58,9 @@ reports on all open files in the system.
 Options:
 .Bl -tag -width Ds
 .It Fl f
-If additional filename arguments are present, restrict examination to files
-open in the same filesystem as the named file arguments.
+Restrict examination to files open in the same filesystems as
+the named file arguments, or to the filesystem containing the
+current directory if there are no additional filename arguments.
 For example, to find all files open in the filesystem where the
 directory
 .Pa /usr/src
@@ -156,6 +158,12 @@ located, or the
 .Fl n
 flag is specified, prints the major/minor device
 number that the special device refers to.
+.It Li R/W
+This column describes the access mode that the file allows.
+The letter ``r'' indicates open for reading;
+the letter ``w'' indicates open for writing.
+This field is useful when trying to find the processes that are
+preventing a filesystem from being down graded to read-only.
 .It Li NAME
 If filename arguments are specified and the
 .Fl f
