--- a/usr.sbin/arp/arp.8
+++ b/usr.sbin/arp/arp.8
@@ -1,5 +1,5 @@
-.\" Copyright (c) 1985, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1985, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -29,9 +29,10 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)arp.8	6.5 (Berkeley) 3/16/91
+.\"	from: @(#)arp.8	8.1 (Berkeley) 6/6/93
+.\"	$Id: arp.8,v 1.1.1.2 1994/05/13 08:08:57 mycroft Exp $
 .\"
-.Dd March 16, 1991
+.Dd June 6, 1993
 .Dt ARP 8
 .Os BSD 4.3
 .Sh NAME
@@ -42,8 +43,6 @@
 .Ar hostname
 .Nm arp
 .Fl a
-.Op Ar vmunix
-.Op Ar kmem
 .Nm arp
 .Fl d Ar hostname
 .Nm arp
@@ -71,13 +70,7 @@ Available options:
 .It Fl a
 The program displays all of the current
 .Tn ARP
-entries by reading the table
-from the file
-.Ar kmem
-(default /dev/kmem) based on the kernel file 
-.Ar vmunix
-(default
-.Pa /vmunix ) .
+entries.
 .It Fl d
 A super-user may delete an entry for the host called
 .Ar hostname
