--- a/usr.sbin/lpr/lpc/lpc.8
+++ b/usr.sbin/lpr/lpc/lpc.8
@@ -1,5 +1,5 @@
-.\" Copyright (c) 1983, 1991 The Regents of the University of California.
-.\" All rights reserved.
+.\" Copyright (c) 1983, 1991, 1993
+.\"	The Regents of the University of California.  All rights reserved.
 .\"
 .\" Redistribution and use in source and binary forms, with or without
 .\" modification, are permitted provided that the following conditions
@@ -29,9 +29,9 @@
 .\" OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 .\" SUCH DAMAGE.
 .\"
-.\"     @(#)lpc.8	6.4 (Berkeley) 3/16/91
+.\"     @(#)lpc.8	8.3 (Berkeley) 4/19/94
 .\"
-.Dd March 16, 1991
+.Dd April 19, 1994
 .Dt LPC 8
 .Os BSD 4.2
 .Sh NAME
@@ -60,7 +60,7 @@ disable or enable a printer's spooling queue,
 rearrange the order of jobs in a spooling queue,
 .It
 find the status of printers, and their associated
-spooling queues and printer dameons.
+spooling queues and printer daemons.
 .El
 .Pp
 Without any arguments,
@@ -73,14 +73,14 @@ arguments as parameters to the command.  The standard input
 may be redirected causing
 .Nm lpc
 to read commands from file.
-Commands may be abreviated;
+Commands may be abbreviated;
 the following is the list of recognized commands.
 .Pp
 .Bl -tag -width Ds -compact
 .It Ic \&? No [ command ... ]
 .It Ic help No [ command ... ]
 Print a short description of each command specified in the argument list,
-or, if no arguments are given, a list of the recognized commands.
+or, if no argument is given, a list of the recognized commands.
 .Pp
 .It Ic abort  No {\ all\ |\ printer\ }
 Terminate an active spooling daemon on the local host immediately and
@@ -121,7 +121,7 @@ Exit from lpc.
 .It Ic restart  No {\ all\ |\ printer\ }
 Attempt to start a new printer daemon. 
 This is useful when some abnormal condition causes the daemon to
-die unexpectedly leaving jobs in the queue.
+die unexpectedly, leaving jobs in the queue.
 .Xr Lpq
 will report that there is no daemon present when this condition occurs. 
 If the user is the super-user,
@@ -161,7 +161,7 @@ lock file for queue control
 .Sh DIAGNOSTICS
 .Bl -tag -width Ds
 .It Sy "?Ambiguous command"
-abreviation matches more than one command
+abbreviation matches more than one command
 .It Sy "?Invalid command"
 no match was found
 .It Sy "?Privileged command"
